--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary_light">#4C662B</color>
+    <color name="secondary_light">#586249</color>
+    <color name="background_light">#F9FAEF</color>
+    <color name="primary_dark">#005005</color>
+    <color name="secondary_dark">#203020</color>
+    <color name="background_dark">#202020</color>
 </resources>
